--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>React</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <div id="root"></div>
+
+
+    <script>
+        const heading = document.createElement('h1');
+        heading.innerHTML = "Hello from Javascript!";
+        const root = document.getElementById('root');
+        root.appendChild(heading);
+    </script>
 </body>
 </html>
